# FLP-Abyss-Player

./: .gitignore  .tool-versions  Cargo.toml  LICENSE  Makefile  README.md  attribution.md  deny.toml  index.html  package.json  vite.config.ts
.github/steps/: gstreamer-linux.yml
.github/workflows/: build.yml  cd.yml  ci.yml  rust.yml  test.yml
assets/static/: 404.html  index.html
client/: .eslintrc  .gitignore  .prettierignore  package.json  vite.config.ts
client/src/: app.tsx  main.tsx  service.ts  translations.ts
coverage/: tarpaulin-report.html
flp-abyss-player/: Cargo.toml
flp-abyss-player-derive/: .gitignore  Cargo.toml
flp-abyss-player-derive/src/: accessible_model.rs  differ.rs  lib.rs  static_record.rs
flp-abyss-player/locales/ui/: en-US.yml  en_US.yml  ja_JP.yml
flp-abyss-player/src/: app.rs  controller.rs  controllers.rs  library.rs  main.rs  model.rs  models.rs  services.rs  timer.rs  utils.rs  view.rs  views.rs
flp-abyss-player/src/app/: config.rs  view.rs
flp-abyss-player/src/app/view/: image.rs  server.rs  video.rs
flp-abyss-player/src/controller/: config.rs  player.rs
flp-abyss-player/src/controllers/: api.rs  config.rs  player.rs
flp-abyss-player/src/controllers/api/: app_config.rs  entries.rs  groups.rs  playlists.rs  scanner.rs  session.rs
flp-abyss-player/src/model/: config.rs  player.rs
flp-abyss-player/src/model/config/: json.rs
flp-abyss-player/src/models/: config.rs  player.rs  playlist.rs
flp-abyss-player/src/models/config/: args.rs  json.rs  tests.rs
flp-abyss-player/src/models/playlist/: writer.rs
flp-abyss-player/src/services/: app_config.rs
flp-abyss-player/src/services/group/: memory.rs
flp-abyss-player/src/utils/: cli.rs  differ.rs  fonts.rs  fs.rs  helper.rs  initializer.rs  test.rs
flp-abyss-player/src/view/: config.rs  player.rs  timer.rs
flp-abyss-player/src/view/player/: image.rs  server.rs  video.rs
flp-abyss-player/src/view/player/server/: service.rs
flp-abyss-player/src/view/player/server/client/: http_server.rs
flp-abyss-player/src/view/player/server/client/http_server/: playlists.rs
flp-abyss-player/src/view/player/server/service/: playlist.rs
flp-abyss-player/src/view/player/video/: native.rs  vlc.rs
flp-abyss-player/src/view/widget/: button_icon.rs  player_bar.rs  playlist.rs  toggle_icon.rs
flp-abyss-player/src/view/widget/config/: media_type.rs  playlist_path.rs  root_path.rs  video_player.rs  video_player_path.rs
flp-abyss-player/src/views/: config.rs  init.rs  player.rs  timer.rs  widget.rs
flp-abyss-player/src/views/player/: image.rs  server.rs  video.rs
flp-abyss-player/src/views/player/server/client/: http_server.rs
flp-abyss-player/src/views/player/server/client/http_server/: playlists.rs
flp-abyss-player/src/views/player/server/service/: playlist.rs
flp-abyss-player/src/views/player/server/service/playlist/: memory.rs
flp-abyss-player/src/views/player/video/: native.rs  vlc.rs
flp-abyss-player/src/views/widget/: button_icon.rs  config.rs  player_bar.rs  playlist.rs  toggle_icon.rs
flp-abyss-player/src/views/widget/config/: media_type.rs  playlist_path.rs  root_path.rs  video_player.rs  video_player_path.rs
flp-abyss-player/src/views/widgets/: button_icon.rs  player_bar.rs  playlist.rs  toggle_icon.rs
flp-abyss-player/src/views/widgets/config/: media_type.rs  playlist_path.rs  root_path.rs  video_player.rs  video_player_path.rs
flp-abyss-player/src/widget/: player_bar.rs  playlist.rs
flp-abyss-player/src/widget/config/: media_type.rs
locale/ui/: en_us.json
scripts/: install.ps1  uninstall.ps1
scripts/windows/: common.ps1  install.ps1  uninstall.ps1
server/: Cargo.toml
server-derive/: Cargo.toml
server/src/: controllers.rs  main.rs  services.rs  utils.rs
server/src/controllers/: api.rs  stream.rs
server/src/controllers/api/: app_config.rs  entries.rs  groups.rs  playlists.rs  scanner.rs  session.rs
server/src/models/: app_config.rs  entry.rs  group.rs  playlist.rs  session.rs
server/src/services/: app_config.rs  entry.rs  group.rs  playlist.rs  session.rs
server/src/services/app_config/: json.rs
server/src/services/entry/: memory.rs
server/src/services/playlist/: memory.rs
server/src/services/session/: fs.rs
server/src/utils/: fs.rs
src/: app.rs  app.tsx  components.ts  config.rs  font.rs  globals.d.ts  helper.rs  locale.rs  main.rs  main.ts  main.tsx  pages.ts  playlist.rs  translations.ts  widget.rs
src-derive/: Cargo.toml  LICENSE  deny.toml
src-derive/src/: differ.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  mobile.json
src-tauri/src/: controllers.rs  lib.rs  main.rs  models.rs  services.rs  shared.rs  state.rs  utils.rs
src-tauri/src/controllers/: api.rs  app_config.rs  app_config_controller.rs
src-tauri/src/controllers/api/: app_config.rs  app_config_test.rs  entries.rs  groups.rs  playlist.rs  playlists.rs  scanner.rs  storage.rs
src-tauri/src/models/: app_config.rs  entry.rs  group.rs  playlist.rs  session.rs  storage.rs
src-tauri/src/models/app_config/: json.rs  json_test.rs  tests.rs
src-tauri/src/models/playlist/: entry.rs  fs.rs  group.rs  meta.rs  tests.rs
src-tauri/src/services/: app_config.rs  entry.rs  group.rs  playlist.rs  session.rs  storage.rs
src-tauri/src/services/app_config/: json.rs
src-tauri/src/services/entry/: fs.rs  memory.rs
src-tauri/src/services/group/: fs.rs  memory.rs
src-tauri/src/services/playlist/: fs.rs  memory.rs
src-tauri/src/services/storage/: fs.rs
src-tauri/src/shared/: test.rs
src-tauri/src/utils/: fs.rs  meta.rs
src/app/: config.rs  view.rs
src/components/: Props.tsx  app_config.ts  app_config.tsx  basic_container.ts  entry.tsx  error.tsx  error_modal.tsx  form_modal.tsx  group.tsx  list.tsx  menu_modal.tsx  omni_player.tsx  playlist.tsx  scan_modal.tsx  scroll_list.tsx
src/config/: args.rs
src/locale/: ui.rs
src/pages/: app_config.ts  configs.ts  configs.tsx  layout.tsx  player.tsx  playlists.tsx  welcome.tsx
src/playlist/: parser.rs  writer.rs
src/services/: api.ts  locale.ts
(+208 files in other folders)
