[package]
name = "flp-abyss-player"
version = "0.2.1"
edition = "2021"
authors = ["Hakukano <hakukano@flp-web.org>"]
description = "Media player that sees all"
repository = "https://github.com/Hakukano/FLP-Abyss-Player"
homepage = "https://flp-abyss-player.rs/"
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["/assets", "/scripts", "/deny.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
eframe = "0.21"
image = "0.24"
once_cell = "1.17"
passwords = "3.1"
quick-xml = { version = "0.27", features = ["serde"] }
rand = "0.8"
reqwest = "0.11.14"
rfd = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2.3"
