[package]
name = "flp-abyss-player"
version = "0.6.0"
edition = "2021"
authors = ["Hakukano <hakukano@flp-web.org>"]
description = "Media player that sees all"
repository = "https://github.com/Hakukano/FLP-Abyss-Player"
homepage = "https://flp-abyss-player.rs/"
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["/assets", "/out", "/scripts", "/deny.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
eframe = "0.21"
fuzzy-matcher = "0.3"
image = "0.24"
nom = "7.1"
once_cell = "1.17"
passwords = "3.1"
quick-xml = { version = "0.27", features = ["serde", "serialize"] }
rand = "0.8"
reqwest = "0.11.14"
rfd = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.2"
tokio = { version = "1", features = ["full"] }
walkdir = "2.3"

# native
egui_glow = { version = "0.21", optional = true }
glow = { version = "0.12", optional = true }

# gstreamer
glib = { version = "0.17", optional = true }
gstreamer = { version = "0.20", optional = true }
gstreamer-app = { version = "0.20", optional = true }
gstreamer-video = { version = "0.20", optional = true }

[features]
native = ["egui_glow", "glow", "glib", "gstreamer", "gstreamer-app", "gstreamer-video"]
