[package]
name = "flp-abyss-player"
version = "0.8.0"
edition = "2021"
authors = ["Hakukano <hakukano@flp-web.org>"]
description = "Media player that sees all"
repository = "https://github.com/Hakukano/FLP-Abyss-Player"
homepage = "https://flp-abyss-player.rs/"
license = "MIT OR Apache-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# derive
flp-abyss-player-derive = { version = "0.1", path = "../flp-abyss-player-derive" }

anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1", features = ["derive"] }
derive_builder = "0.20"
eframe = "0.26"
egui_glow = "0.26"
fuzzy-matcher = "0.3"
glib = "0.19"
glow = "0.13"
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
http-range-header = "0.4"
image = "0.25"
nom = "7.1"
once_cell = "1.17"
parking_lot = "0.12"
passwords = "3.1"
phf = { version = "0.11", features = ["macros"] }
quick-xml = { version = "0.31", features = ["serde", "serialize"] }
rand = "0.8"
reqwest = "0.12"
rfd = "0.14"
rust-i18n = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
tap = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["full", "tokio", "tokio-stream"] }
tower-http = { version = "0.5", features = ["full"] }
walkdir = "2.3"
