[package]
name = "flp-abyss-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
axum-macros = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
flp-abyss-player-derive = { version = "0.1", path = "../server-derive" }
flp-rusty-model = { git = "https://github.com/Hakukano/FLP-Rusty-Model.git", tag = "v0.1.0" }
http = "1.1"
http-range-header = "0.4"
image = "0.25"
mime = "0.3"
mime_guess = "2.0"
nom = "7.1"
once_cell = { version = "1.19", features = ["parking_lot"] }
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
tap = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
walkdir = "2.4"
