[package]
name = "flp-abyss-player"
version = "0.8.0"
edition = "2021"
authors = ["Hakukano <hakukano@flp-web.org>"]
description = "Media player that sees all"
repository = "https://github.com/Hakukano/FLP-Abyss-Player"
homepage = "https://flp-abyss-player.rs/"
license = "MIT OR Apache-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flp_abyss_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
# derive
flp-abyss-player-derive = { version = "0.1", path = "../src-derive" }

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
image = "0.24"
mime = "0.3"
mime_guess = "2.0"
nom = "7.1"
once_cell = "1.19"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
tap = "1.0"
tauri = { version = "2.0.0-beta", features = ["tracing", "test", "devtools"] }
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
